force-app/main/default/objects/ilms__Option__c/ilms__Option__c.object-meta.xml
<CustomObject>
    <label>Question Choices</label>
    <nameField>
        <displayFormat>O{00000}</displayFormat>
        <label>Question Choice Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Question Choices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>