force-app/main/default/objects/ilms__Option__c/fields/ilms__Answer__c.field-meta.xml
<CustomField>
    <fullName>ilms__Answer__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If selected, then this will be considered the correct answer.</inlineHelpText>
    <label>Answer</label>
    <type>Checkbox</type>
</CustomField>