force-app/main/default/objects/ilms__Option__c/fields/ilms__Match__c.field-meta.xml
<CustomField>
    <fullName>ilms__Match__c</fullName>
    <label>Match</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>