force-app/main/default/objects/ilms__Option__c/fields/ilms__No__c.field-meta.xml
<CustomField>
    <fullName>ilms__No__c</fullName>
    <inlineHelpText>The oder this choice will appear.</inlineHelpText>
    <label>No</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>