force-app/main/default/objects/ilms__Option__c/fields/ilms__Text__c.field-meta.xml
<CustomField>
    <fullName>ilms__Text__c</fullName>
    <label>Text</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>